<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="cl.withyou.app.ui.home.HomeFragment"
        android:label="@string/app_name" />

    <fragment
        android:id="@+id/messagesFragment"
        android:name="cl.withyou.app.ui.PlaceholderFragment"
        android:label="@string/title_messages">
        <argument
            android:name="message"
            android:defaultValue="@string/placeholder_messages"
            app:argType="reference" />
    </fragment>

    <fragment
        android:id="@+id/contactsFragment"
        android:name="cl.withyou.app.ui.PlaceholderFragment"
        android:label="@string/title_contacts">
        <argument
            android:name="message"
            android:defaultValue="@string/placeholder_contacts"
            app:argType="reference" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="cl.withyou.app.ui.PlaceholderFragment"
        android:label="@string/title_settings">
        <argument
            android:name="message"
            android:defaultValue="@string/placeholder_settings"
            app:argType="reference" />
    </fragment>

</navigation>
